--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="LicenseGuard"
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_KEY=base64:'VALUE FROM GENERATE.PLUS'
+APP_DEBUG=false
+APP_TIMEZONE=Africa/Lagos
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -62,3 +62,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+FLW_SECRET_KEY="Your Secret Key"
