--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="LicenseGuard"
 APP_ENV=local
-APP_KEY=base64:'VALUE FROM GENERATE.PLUS'
+APP_KEY=
 APP_DEBUG=false
 APP_TIMEZONE=Africa/Lagos
 APP_URL=http://localhost
