Added payment chart widget

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "flowframe/laravel-trend": "^0.2.0",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "leandrocfe/filament-apex-charts": "^3.1",
         "spatie/laravel-permission": "^6.9",
         "swisnl/filament-backgrounds": "^1.1"
     },
