--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.2.0",
+        "iankumu/mpesa": "^1.3",
         "joaopaulolndev/filament-edit-profile": "^1.0",
+        "kemboielvis/mpesa-sdk-php": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "leandrocfe/filament-apex-charts": "^3.1",
