Added mpesa related environment variables

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,10 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 FLW_SECRET_KEY="Your Secret Key"
+
+MPESA_CONSUMER_KEY=
+MPESA_CONSUMER_SECRET=
+MPESA_CALLBACK_URL=
+SAFARICOM_PASSKEY=
+MPESA_BUSINESS_SHORTCODE=
+MPESA_ENVIRONMENT=sandbox
