Paystack added, Kindly the .env.example on how to set up

--- a/.env.example
+++ b/.env.example
@@ -63,4 +63,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+CHECKOUT="paystack or flutterwave"
 FLW_SECRET_KEY="Your Secret Key"
+PAYSTACK_KEY="Your Secret Key"
